[package]
name = "limitless_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "wrap_help"] }
futures = "0.3.28"
futures-util = "0.3.28"
http-cache-reqwest = "0.11.1"
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
    "trust-dns",
    "serde_json",
    "async-compression",
    "json",
    "gzip"
] }
reqwest-middleware = "0.2.2"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
